--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
@@ -1,29 +1,9 @@
-{% extends 'admin/base_site.html' %}
+{% extends 'base_import.html' %}
 {% load custom_filters %}
 {% load i18n %}
 {% load static %}
 
-{% block title %}{% trans 'Import custody' %}{% endblock %}
-
-{% block breadcrumbs %}
-    <div class="breadcrumbs">
-      <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-      &rsaquo; {% trans 'Import custody' %}
-    </div>
-{% endblock %}
-
-{% block content %}
-    <h1>{% trans 'Import custody' %}</h1>
-
-    <div id="upload_form">
-        <h2>{% trans 'Upload file' %}</h2>
-        <form action="{% url 'import_custody' %}" enctype="multipart/form-data" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Import file' %}">
-        </form>
-    </div>
-
+{% block instructions %}
     <div id="instructions">
         <h2>{% trans 'Instructions' %}</h2>
         <ul>
@@ -42,58 +22,4 @@
             </li>
         </ul>
     </div>
-
-    <div id="results">
-        <h2>{% trans 'Results' %}</h2>
-
-        {% if simulation %}
-            <div id="simulation" style="background-color: #66FF66; padding: 10px">
-                <h2>{% trans 'Warning: This has been a simulation of the import' %}</h2>
-                <ul>
-                    <li>{% trans 'No change has been made' %}</li>
-                    <li>{% trans 'If the results are ok, import the file again disabling the "SIMULATION" option' %}</li>
-                </ul>
-            </div>
-        {% endif %}
-
-        {% if result %}
-            <div id="results_summary">
-                <h3>{% trans 'Resumen' %}</h3>
-                <ul>
-                    <li>Estado: REVISAR</li>
-                    <li>Filas importadas correctamente: 100</li>
-                    <li>Filas no importadas: 0</li>
-                    <li>Filas importadas que habría que revisar: 2</li>
-                </ul>
-            </div>
-            <div id="results_by_row">
-                <h3>{% trans 'Resultados por fila' %}</h3>
-                <table style="width: max-content">
-                    <thead>
-                        <tr>
-                            <th>Fila</th>
-                            <th>Datos excel</th>
-                            <th>Detalles</th>
-                            <th>Resultado</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-    {% for row in result.rows %}
-                        <tr>
-                            <td>{{ row.row_index }}</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-    {% empty %}
-                        <tr>
-                            <td colspan="4">{% trans 'No hay resultados' %}</td>
-                        </tr>
-    {% endfor %}
-                    </tbody>
-                </table>
-        </div>
-        {% endif %}
-    </div>
-
 {% endblock %}
