--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 {% block instructions %}
-    <div id="instructions">
+    <div id="instructions" class="main-container">
         <h2>{% trans 'Instructions' %}</h2>
         <ul>
             <li><a href="/admin/ampa_manager/custodyedition/add/" target="_new">{% trans 'Optional' %}: {% trans 'Create a new custody edition' %}</a></li>
