--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
@@ -16,7 +16,7 @@
             <li>{% trans 'The columns must be in the following order' %}:
                 <ul>
                 {% for column in excel_columns %}
-                    <li>{% trans 'Column' %} {{ column.0 }}:  {{ column.1 }}</li>
+                    <li>{% trans 'Column' %} {{ column.letter }}:  {{ column.label }}</li>
                 {% endfor %}
                 </ul>
             </li>
