custody import improves

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
@@ -31,92 +31,110 @@
         }
         .formatted_column_value_error {
             color: white;
-            background-color: red;
+            background-color: #f94144;
             font-size: 0.8125rem;
-            font-weight: bold;
+            {#font-weight: bold;#}
+            border-radius: 15px;
+            padding: 1px 10px;
         }
         .formatted_column_value_warning {
             color: black;
             background-color: lightgoldenrodyellow;
             font-size: 0.8125rem;
-            font-weight: bold;
+            {#font-weight: bold;#}
+            border-radius: 15px;
+            padding: 1px 10px;
         }
         .formatted_column_value {
             color: black;
             font-size: 0.8125rem;
         }
         .imported_model_status_not_processed {
-            background-color: greenyellow;
-            padding: 2px 2px;
+            background-color: #f9c74f;
+            padding: 1px 10px;
             color: darkslategrey;
+            border-radius: 15px;
         }
         .imported_model_status_not_modified {
             background-color: lightgray;
-            padding: 2px 2px;
+            padding: 1px 10px;
             color: darkslategrey;
+            border-radius: 15px;
         }
         .imported_model_status_created {
-            background-color: blueviolet;
-            padding: 2px 2px;
-            color: white
+            background-color: #277da1;
+            padding: 1px 10px;
+            color: white;
+            border-radius: 15px;
         }
         .imported_model_status_updated {
-            background-color: orange;
-            padding: 2px 2px;
-            color: black;
+            {#background-color: #f8961e;#}
+            padding: 1px 10px;
+            color: lightslategrey;
+            border: 1px solid lightslategrey;
+            border-radius: 15px;
         }
         .imported_model_status_error {
-            background-color: red;
-            padding: 2px 2px;
+            background-color: #f94144;
+            padding: 1px 10px;
             color: lightgray;
+            border-radius: 15px;
         }
         .imported_model_status_omitted {
             background-color: lightgray;
-            padding: 2px 2px;
+            padding: 1px 10px;
             color: darkslategrey;
+            border-radius: 15px;
         }
         .imported_model_error {
-            background-color: red;
-            padding: 1px;
-            color: lightgray;
+            background-color: #f94144;
+            padding: 1px 10px;
+            color: whitesmoke;
+            border-radius: 15px;
         }
         .imported_model_warning {
-            background-color: greenyellow;
-            padding: 1px;
+            background-color: #f9c74f;
+            padding: 1px 10px;
             color: black;
+            border-radius: 15px;
         }
         .imported_model_changed_field {
-            background-color: greenyellow;
-            padding: 1px;
+            background-color: #f8961e;
+            padding: 1px 10px;
             color: black;
+            border-radius: 15px;
         }
         .row_state_error {
             text-transform: uppercase;
             padding: 6px;
             color: white;
-            background-color: red;
+            background-color: #f94144;
             font-weight: bold;
+            border-radius: 15px;
         }
         .row_state_warning {
             text-transform: uppercase;
             padding: 6px;
             color: black;
-            background-color: greenyellow;
+            background-color: #f9c74f;
             font-weight: bold;
+            border-radius: 15px;
         }
         .row_state_omitted {
             text-transform: uppercase;
             padding: 6px;
             color: black;
-            background-color: lightgrey;
+            background-color: #fed9b7;
             font-weight: bold;
+            border-radius: 15px;
         }
         .row_state_ok {
             text-transform: uppercase;
             padding: 6px;
-            color: black;
-            background-color: green;
+            color: white;
+            background-color: #90be6d;
             font-weight: bold;
+            border-radius: 15px;
         }
         #rows_detected {
             background-color: cadetblue;
@@ -125,33 +143,38 @@
         #all_rows {
             background-color: darkslategrey;
             color: white;
-            padding: 15px
+            padding: 15px;
+            border-radius: 15px;
         }
         #rows_imported_ok {
-            background-color: green;
+            background-color: #90be6d;
             color: white;
-            padding: 15px
+            padding: 15px;
+            border-radius: 15px;
         }
         #rows_count {
             font-weight: bold;
             font-size: 30px;
         }
         #rows_imported_warning {
-            background-color: greenyellow;
-            padding: 15px
+            background-color: #f9c74f;
+            padding: 15px;
+            border-radius: 15px;
         }
         #rows_not_imported {
-            background-color: red;
+            background-color: #f94144;
             padding: 15px;
-            color: white
+            color: white;
+            border-radius: 15px;
         }
         #rows_omitted {
             background-color: lightgray;
-            padding: 15px
+            padding: 15px;
+            border-radius: 15px;
         }
         #simulation {
-            background-color: #FDFA72;
-            padding: 15px;
+            background-color: #f9c74f;
+            padding: 5px 15px;
             border-radius: 15px;
         }
         #results_summary {
